# feadBot

./: .dockerignore  .gitignore  .gitlab-ci.yml  .ruff.toml  Dockerfile  README.md  pyproject.toml  template.env
.helm/: values-development.yaml  values-production.yaml
app/: main.py
app/adapters/: channel.py
app/adapters/max/: adapter.py
app/adapters/telegram/: adapter.py
app/api/: routes.py
app/config/: messages.py  settings.py
app/core/: db.py  db_config.py  db_middleware.py  state.py
app/models/: __init__.py  admin.py  analysis.py  constants.py  manager.py
app/observability/: logging.py
app/repositories/: admin.py  catalog.py  feedback_pg.py  managers.py  pms_reservations.py  roles.py  user.py  user_hotel.py  user_pms_reservation.py
app/services/: __init__.py  admin_user.py  analysis_recovery.py  base.py  button_state.py  callback.py  command.py  feedback.py  feedback_limit.py  feedback_processor.py  max_webhook_handler.py  menu.py  message_router.py  pms.py  pms_handler.py  pms_user_sync.py  registration.py  report_scheduler.py  reporting.py  storage.py  telegram_webhook_handler.py  ui_message.py  user_validation.py  webhook_processing.py
app/services/llm/: llm_pool.py  (+2 more)
app/utils/: hotel_timezone.py  payload.py  qr.py  security.py
app/workers/: feedback_session_gc.py
database_migrations/: .pylintrc  README.md  migrate.py
shared_models/: __init__.py  constants.py  tables.py
tests/load_testing/: analyzed_negative_reviews_20250914_222550.csv  analyzed_negative_reviews_20250915_165327.csv  test_real_llm_priority.py
tests/pms_testing/: pms_endpoint_testing.py  test_pms_data_scenarios.json
(+16 files in other folders)
