 [project]
 name = "alean-assistant"
 version = "0.1.0"
 description = "MVP monolith FastAPI app for Alean AI Assistant"
 readme = "README.md"
 requires-python = ">=3.11,<3.13"
 authors = [
   { name = "Raft Team", email = "sales@raftds.com" }
 ]
 dependencies = [
   "fastapi>=0.111.0,<0.112.0",
   "uvicorn[standard]>=0.30.0,<0.31.0",
   "pydantic-settings>=2.4.0,<3.0.0",
   "httpx>=0.27.0,<0.28.0",
   "prometheus-client>=0.20.0,<0.21.0",
   "python-dotenv>=1.0.1,<2.0.0",
   "structlog>=24.1.0,<25.0.0",
   "orjson>=3.10.3,<4.0.0",
   "sqlalchemy>=2.0.31,<3.0.0",
   "asyncpg>=0.29.0,<0.30.0",
   "psycopg2-binary>=2.9.9,<3.0.0",
   "sqlmodel>=0.0.24,<0.0.25",
   "alembic>=1.13.2,<2.0.0",
   "aioboto3>=15.4.0,<16.0.0",
   "tenacity>=8.4.2,<9.0.0",
   "dateparser>=1.2.0,<2.0.0",
   "python-telegram-bot>=22.4,<23.0",
   "qrcode[pil]>=7.4.2,<8.0.0",
   "openai>=1.107.0",
   "langfuse==2.60.10",
   "openpyxl>=3.1.2,<4.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.5.5,<0.6.0",
  "types-setuptools>=68.2.0.2,<69.0.0",
  "types-psycopg2>=2.9.21.20240201,<3.0.0",
]

 [build-system]
 requires = ["hatchling>=1.25.0"]
 build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]  # Игнорировать ошибки длины строки для всего проекта

# Flake8 конфигурация
[tool.flake8]
max-line-length = 120
ignore = ["E501"]

# Pylint конфигурация  
[tool.pylint.format]
max-line-length = 120

# Black конфигурация
[tool.black]
line-length = 120
